STYLE: Fix offer card image whitespaces

--- a/clear-career/client/src/components/offers/OfferDashboardCard.module.scss
+++ b/clear-career/client/src/components/offers/OfferDashboardCard.module.scss
@@ -32,7 +32,7 @@
 
 .wrapper {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 1rem;
 
     @media (max-width: 480px) {
@@ -42,8 +42,7 @@
 }
 
 .imageContainer {
-    height: 6rem;
-    min-width: 6rem;
+    height: 8rem;
     border-radius: 0.7rem 0 0 0.7rem;
     overflow: hidden;
     flex-shrink: 0;
